# kttc

./: .bandit  .deepsource.toml  .deepsource.toml.local  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .vulture  .vulture_whitelist.py  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.fa.md  CODE_OF_CONDUCT.hi.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.ru.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.fa.md  CONTRIBUTING.hi.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  CONTRIBUTING.zh.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_QA_REPORT.md  Dockerfile.ci  LICENSE  MANIFEST.in  NOTICE  README.fa.md  README.hi.md  README.md  README.ru.md  README.zh.md  RELEASE_NOTES.md  SECURITY.fa.md  SECURITY.hi.md  SECURITY.md  SECURITY.ru.md  SECURITY.zh.md  action.yml  (+9 more)
.devcontainer/: devcontainer.json  setup.sh
.gemini/: config.yaml  styleguide.md
.github/: CI_OPTIMIZATION.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bandit.yml  benchmark.yml  ci.yml  codeql.yml  deepsource.yml  dependabot-auto-merge.yml  docs-lint.yml  docs.yml  examples.yml  gemini-review.yml  publish.yml  release.yml  sonarcloud.yml  translation-qa.yml  trufflehog.yml  validation.yml
.sonarlint/: connectedMode.json
docs/: MIGRATION_HYBRID.md  README.md  cli-usage.md  configuration.md  contributing.md  index.md  installation.md  providers.md  quickstart.md  testing.md
docs/api/: README.md  cli.md  core.md  providers.md
docs/benchmarks/: SUMMARY.md  chinese-helper-benchmark.json  english-helper-benchmark.json  mqm_and_cost_benchmark.json  russian-helper-benchmark.json
docs/cli/: CLI_README.md  DEMO_MODE.md  INSTALLATION.md
docs/development/: developer-guide.md
docs/fa/: README.md
docs/guides/: user-guide.md
docs/hi/: README.md
docs/planning/: helpers-agents-roadmap.md
docs/research/: nlp-helpers-enhancement-2025.md  nlp-helpers-summary-ru.md
docs/ru/: README.md
docs/zh/: README.md
examples/: README.md  basic_usage.py  batch_processing.py  kttc_demo.ipynb  language_validators_demo.py  manual_test.py  streamlit_app.py  streamlit_requirements.txt  test_lightweight_metrics.py  test_translations.xliff  test_xliff_parser.py
examples/batch/: README.md  translations.csv  translations.json  translations.jsonl
examples/cli/: README.md  README_DEMO.md  batch_demo.csv  demo_commands.sh  source_en.txt  source_en_realistic.txt  translation_ru_bad.txt  translation_ru_deepl.txt  translation_ru_good.txt  translation_ru_realistic_bad.txt  translation_ru_realistic_good.txt  translation_ru_realistic_medium.txt
glossaries/: README.md  base.json  technical.json
glossaries/en/: adjective_order_en.json  automotive_terminology_en.json  customs_terminology_en.json  false_friends_en.json  financial_terminology_en.json  grammar_advanced.json  heteronyms_en.json  homophones_en.json  idioms_en.json  it_terminology_en.json  legal_terminology_en.json  llm_terminology.json  logistics_terminology_en.json  medical_terminology_en.json  mqm_core.json  mqm_error_taxonomy.json  nlp_terms.json  phrasal_verbs_en.json  preposition_traps_en.json  transformer_nlp_terms.json  translation_metrics.json
glossaries/fa/: automotive_terminology_fa.json  colloquial_formal_fa.json  compound_verbs_fa.json  customs_terminology_fa.json  false_friends_fa.json  financial_terminology_fa.json  grammar_fa.json  idioms_fa.json  it_terminology_fa.json  legal_terminology_fa.json  logistics_terminology_fa.json  medical_terminology_fa.json  mqm_core.json  mqm_core_fa.json  nlp_terms_fa.json  taarof_politeness_fa.json  untranslatable_fa.json
glossaries/hi/: aspiration_traps_hi.json  automotive_terminology_hi.json  cases_hi.json  chandrabindu_anusvara_hi.json  customs_terminology_hi.json  financial_terminology_hi.json  gender_traps_hi.json  homophones_paronyms_hi.json  idioms_hi.json  it_terminology_hi.json  legal_terminology_hi.json  logistics_terminology_hi.json  medical_terminology_hi.json  mqm_core.json  mqm_core_hi.json  nlp_terms_hi.json  verb_ergativity_hi.json
glossaries/ru/: automotive_terminology_ru.json  customs_terminology_ru.json  financial_terminology_ru.json  homonyms_paronyms_ru.json  idioms_ru.json  it_terminology_ru.json  legal_terminology_ru.json  logistics_terminology_ru.json  medical_terminology_ru.json  morphology_ru.json  mqm_core.json  mqm_core_ru.json  nlp_terms_ru.json  position_verbs_ru.json  stress_patterns_ru.json  untranslatable_ru.json
glossaries/zh/: automotive_terminology_zh.json  classifiers_zh.json  customs_terminology_zh.json  financial_terminology_zh.json  homophones_cultural_zh.json  idioms_expressions_zh.json  internet_slang_2024_zh.json  it_terminology_zh.json  legal_terminology_zh.json  logistics_terminology_zh.json  medical_terminology_zh.json  mqm_core.json  mqm_core_zh.json  nlp_terms_zh.json  resultative_complements_zh.json  separable_verbs_zh.json  word_order_traps_zh.json
profiles/: example.yaml
scripts/: benchmark_chinese_helper.py  benchmark_english_helper.py  benchmark_mqm_and_cost.py  benchmark_russian_helper.py  clean_quality_files.py  download_benchmark_data.py  download_flores_from_github.py  download_real_flores200.py  final_article_check.py  generate_all_bad_translations.py  generate_bad_translations.py  generate_critical_bad_translations.py  generate_hindi_persian_benchmarks.py  generate_quality_benchmark_data.py  generate_russian_report.py  quick_benchmark_test.py  run_comprehensive_benchmark.py  test_fluency_agents.py  test_russian_error_detection.py  validate_benchmark_data.py
src/kttc/: __init__.py  __main__.py
tests/: INTEGRATION_TESTS.md  README.md  __init__.py  conftest.py  test_wmt_benchmark.py
tests/benchmarks/: README.md  __init__.py  dataset_loader.py  enhanced_dataset_loader.py  test_wmt_benchmark.py  translation_arena.py  wmt_benchmark.py
tests/e2e/: test_real_api.py
tests/integration/: README.md  __init__.py  test_cli_flow.py  test_gigachat_integration.py  test_specialized_fluency_agents.py
tests/performance/: test_benchmarks.py
(+377 files in other folders)
