[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Include only source code, exclude tests and dev files
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kttc = ["py.typed"]

[project]
name = "kttc"
version = "0.4.2"
description = "Knowledge Translation Transmutation Core - Transforming translations into gold-standard quality"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "KTTC AI", email = "dev@kt.tc"}
]
license-files = ["LICENSE", "NOTICE"]
keywords = ["translation", "qa", "quality-assurance", "llm", "agents", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core CLI dependencies (lightweight, ~50MB)
    "typer>=0.20.0",
    "rich>=14.2.0",
    "defusedxml>=0.7.1",  # Secure XML parsing
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "aiohttp>=3.13.2",
    "openai>=2.8.1",
    "anthropic>=0.74.0",
    "aiosqlite>=0.21.0",
    "orjson>=3.11.4",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "sacrebleu>=2.5.1",
    "mtdata>=0.4.3",
    # Russian NLP
    "mawo-core[all]>=0.1.3",  # Russian morphology, tokenization, NER
    "language-tool-python>=3.1.0",  # Grammar checking for Russian and English
]

[project.optional-dependencies]
# Metrics - optional semantic similarity tools
metrics = [
    "sentence-transformers>=5.1.2",
]

# spaCy for English/Chinese NLP (optional due to pydantic 1.x conflict)
# Note: spaCy's weasel dependency requires pydantic 1.x, which conflicts with kttc's pydantic 2.x
# Install only on Python <3.13 and when needed for advanced NLP features
nlp = [
    "spacy>=3.8.11",  # English, Chinese, and other languages
]

# Chinese language helpers - jieba + HanLP
chinese = [
    "jieba>=0.42.1",  # Chinese word segmentation (lightweight)
    "hanlp>=2.1.3",  # Advanced Chinese grammar checking
]

# Hindi language helpers - Indic NLP + Stanza + Spello
hindi = [
    "indic-nlp-library>=0.92",  # Tokenization, normalization for Hindi
    "stanza>=1.11.0",  # POS tagging, NER, lemmatization
    "spello>=1.3.0",  # Spell checking for Hindi
]

# Persian/Farsi language helpers - DadmaTools (all-in-one solution)
persian = [
    "dadmatools[full]>=2.3.6",  # Complete Persian NLP toolkit (spaCy-based)
]

# All language-specific helpers
all-languages = [
    "spacy>=3.8.11",  # English, Chinese NLP (Python <3.13 only)
    "jieba>=0.42.1",  # Chinese word segmentation
    "hanlp>=2.1.3",  # Chinese advanced NLP
    "indic-nlp-library>=0.92",  # Hindi tokenization
    "stanza>=1.11.0",  # Hindi POS/NER/lemma
    "spello>=1.3.0",  # Hindi spell checking
    "dadmatools[full]>=2.3.6",  # Persian (all-in-one)
]

# Excel export support
xlsx = [
    "openpyxl>=3.1.2",
]

# Development tools
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "black>=25.11.0",
    "ruff>=0.14.6",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "types-requests>=2.32.4",
    "types-tqdm>=4.67.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-autorefs>=1.4.3",
    "bandit>=1.9.2",
    "pylint>=4.0.3",
]

[project.scripts]
kttc = "kttc.cli.main:app"

[project.urls]
Homepage = "https://github.com/kttc-ai/kttc"
Repository = "https://github.com/kttc-ai/kttc"
Issues = "https://github.com/kttc-ai/kttc/issues"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"vulture_whitelist.py" = ["F821"]  # Vulture whitelist uses bare names

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']

# Mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true
cache_fine_grained = true
files = ["src/kttc"]
exclude = ["scripts/"]

# Ignore missing imports for optional dependencies without type stubs
[[tool.mypy.overrides]]
module = ["huggingface_hub", "huggingface_hub.*", "sentence_transformers", "sentence_transformers.*", "comet", "comet.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["language_tool_python", "language_tool_python.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hanlp", "hanlp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mawo", "mawo.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["datasets", "datasets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["conftest"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["indicnlp", "indicnlp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["stanza", "stanza.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["spello", "spello.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dadmatools", "dadmatools.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rich", "rich.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["typer", "typer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["spacy", "spacy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jieba", "jieba.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sacrebleu", "sacrebleu.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic_settings", "pydantic_settings.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

# Allow untyped decorators for CLI commands (typer decorators are not typed)
[[tool.mypy.overrides]]
module = ["kttc.cli.*", "kttc.webui.*"]
disallow_untyped_decorators = false

# Allow subclassing BaseSettings from pydantic_settings
[[tool.mypy.overrides]]
module = ["kttc.utils.config"]
disallow_any_expr = false
disallow_subclassing_any = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--cov=kttc",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]
markers = [
    "benchmark: mark test as performance benchmark",
    "slow: mark test as slow-running",
    "metrics: mark test as requiring heavy ML metrics dependencies",
]
filterwarnings = [
    "ignore::UserWarning:jieba._compat",
    "ignore::FutureWarning:torch.cuda",
    "ignore::pytest.PytestCollectionWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/kttc"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Vulture configuration (dead code detection) - STRICT
[tool.vulture]
min_confidence = 60  # Lower threshold to catch more potential dead code
paths = ["src/kttc"]
exclude = ["tests/", "examples/", "__pycache__/"]
ignore_decorators = ["@app.route", "@app.on_event", "@app.get", "@app.post", "@app.websocket"]
ignore_names = ["test_*", "setUp", "tearDown", "main", "app"]
sort_by_size = true

# Bandit configuration (security scanning) - STRICT
[tool.bandit]
exclude_dirs = ["tests/", "examples/", ".venv/", "venv/", "__pycache__/"]
# Removed B101 skip - will check all issues including asserts
# Removed obsolete tests: B309, B320, B322, B325, B410 (no longer in modern bandit)
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B321", "B323", "B324", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B612", "B701", "B702", "B703"]
severity = "low"  # Check all severity levels
confidence = "low"  # Check all confidence levels

# Radon configuration (complexity metrics) - STRICT
[tool.radon]
cc_min = "A"  # Strict: Only allow grade A complexity
mi_min = 20  # Minimum maintainability index (0-100 scale)
show_complexity = true
average = true

# Pylint configuration
[tool.pylint.main]
py-version = "3.11"
jobs = 0  # Auto-detect CPU cores
recursive = true
source-roots = ["src"]
ignore = ["tests", "examples", "scripts", "__pycache__"]
ignore-patterns = ["test_*.py", "conftest.py"]

[tool.pylint.messages_control]
# Minimal disables - only for things that conflict with other tools or are false positives
disable = [
    # Conflicts with black/ruff (they handle these)
    "line-too-long",                  # C0301 - handled by black
    "wrong-import-order",             # C0411 - handled by ruff/isort
    "ungrouped-imports",              # C0412 - handled by ruff/isort

    # False positives with our stack
    "no-member",                      # E1101 - false positives with pydantic
    "invalid-overridden-method",      # W0236 - false positives with async overrides

    # Intentional design patterns
    "import-outside-toplevel",        # C0415 - used to avoid circular imports
    "duplicate-code",                 # R0801 - similar patterns in agents are intentional
    "too-few-public-methods",         # R0903 - data classes, protocols, configs

    # Style preferences (not bugs, handled by ruff)
    "logging-fstring-interpolation",  # W1203 - f-strings are readable
    "logging-format-interpolation",   # W1202 - same
]

# Enable important checks that should be fixed
enable = [
    "unused-import",      # W0611
    "unused-variable",    # W0612
    "unused-argument",    # W0613
    "unreachable",        # W0101
    "undefined-variable", # E0602
    "syntax-error",       # E0001
]

[tool.pylint.format]
max-line-length = 120  # Allow slightly longer lines

[tool.pylint.basic]
good-names = ["i", "j", "k", "n", "x", "y", "z", "f", "e", "ex", "id", "ok", "db", "io", "_"]
good-names-rgxs = ["^[a-z]$", "^[a-z][a-z0-9]?$"]  # Allow short variable names

[tool.pylint.design]
max-args = 10           # Allow up to 10 arguments
max-locals = 20         # Allow up to 20 local variables
max-attributes = 15     # Allow up to 15 instance attributes
max-returns = 8         # Allow up to 8 return statements
max-branches = 15       # Allow up to 15 branches
max-statements = 60     # Allow up to 60 statements

[tool.pylint.similarities]
min-similarity-lines = 10  # Ignore small code duplications
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.pylint.typecheck]
# Ignore missing member errors for dynamic libraries
ignored-modules = ["pydantic", "typer", "rich"]
ignored-classes = ["BaseModel", "BaseSettings"]
